Реализован основной функционал
- осуществлены обращение и парсинг ответа от сервиса api.giphy.com/v1/gifs/random в классе GifService

- осуществлены обращение и парсинг ответа от сервиса https://openexchangerates.org/api в классе CurrencyTracker

- вынесены все валюты, отслеживаемые сервисом https://openexchangerates.org/api, в enum Currency

- отредактированы ресурсы в файле application.properties

--- a/recource/application.properties
+++ b/recource/application.properties
@@ -1,10 +1,13 @@
 currency.name=RUB
 
 giphy.api_key=BurrbVkC9TIqN2OaURlawLOvPi3ffFW9
-giphy.gif.url=api.giphy.com/v1/gifs/random
-giphy.tag.currency_above=rich
-giphy.tag.currency_below=broke
+giphy.gif.url=https://api.giphy.com/v1/gifs/random
+giphy.tag.rate_higher=rich
+giphy.tag.rate_lower=broke
 
-rates.url=https://openexchangerates.org/api/
+rates.app_id=e93762742c5942f8a9ed5e2cf37f154a
+rates.url=https://openexchangerates.org/api
+rates.url.historical=https://openexchangerates.org/api/historical
+
 
 
