Добавлена обработка ошибок сервера
В случае ошибки на сервере пользователю вернётся gif по умолчанию (web/gif/no_work.gif)

--- a/resource/application.properties
+++ b/resource/application.properties
@@ -1,7 +1,9 @@
 currency.name=RUB
 
+default_gif=no_work.gif
+
 giphy.api_key=BurrbVkC9TIqN2OaURlawLOvPi3ffFW9
-giphy.gif.url=https://api.giphy.com/v1/gifs/random
+giphy.random.url=https://api.giphy.com/v1/gifs/random
 giphy.tag.rate_higher=rich
 giphy.tag.rate_lower=broke
 
